--- a/src/Resources/config/services.yaml
+++ b/src/Resources/config/services.yaml
@@ -1,6 +1,6 @@
 services:
 
-  miladghofrani\DecoratorBundle\Transformer\TransformerService:
+  MiladGhofrani\DecoratorBundle\Transformer\TransformerService:
     public: true
     lazy: true
     arguments:
